# devtools-course-practice

./: index.js  package.json
lab-guide/: topics.md
modules/Abuyassen_A_LIS/: CTestTests.txt
modules/Polynom_and_Monom_CheremushkinKI/: CTestTests.txt
modules/abuyassen_albara_kruskal_mst/: CTestTests.txt
modules/alimov_mike_ceacer_cifir/: CTestTests.txt
modules/bakina_kseniia_betcher/: CTestTests.txt
modules/balova_e_interpolation_search/: CTestTests.txt
modules/belyaev_volume_figures/: CMakeLists.txt  CTestTests.txt
modules/bisymmetric_matrix/: CTestTests.txt
modules/borisov_m_pos_systems_calculator/: CTestTests.txt
modules/brazhnik_dmitry_converter_arab_rom/: CTestTests.txt
modules/chornyi-yura-vigenere/: CTestTests.txt
modules/conways_life/: CTestTests.txt
modules/deicstra_algorithm/: CTestTests.txt  README.md
modules/elanski_alexandr_Euler_function/: CTestTests.txt
modules/ermakov_pavel_tringle_params/: CTestTests.txt
modules/graph_diameter/: CTestTests.txt
modules/groshev_point_in_triangle/: CTestTests.txt
modules/gudkov_a_common_posled/: CTestTests.txt
modules/ivanov_a_set/: CTestTests.txt  README.md
modules/kamenev_hanoi_tower/: CMakeLists.txt  CMakeTests.txt
modules/kamenev_hanoi_tower/application/: CMakeLists.txt  hanoi_tower.cpp
modules/kamenev_hanoi_tower/include/: hanoi_tower.h  hanoi_tower_application.h
modules/kamenev_hanoi_tower/src/: CMakeLists.txt  hanoi_tower.cpp  hanoi_tower_application.cpp
modules/kamenev_hanoi_tower/test/: test_hanoi_tower.cpp  test_main.cpp
лаборатория-гид/: topics.md
(+383 files in other folders)
